force-app/main/default/objects/Survey_Setting__c/Survey_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Survey Setting</label>
</CustomObject>