force-app/main/default/objects/Survey_Setting__c/fields/Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Background_Color__c</fullName>
    <description>Background color for survey.</description>
    <label>Background Color</label>
    <length>15</length>
    <type>Text</type>
</CustomField>