force-app/main/default/objects/Survey_Setting__c/fields/Community_Name__c.field-meta.xml
<CustomField>
    <fullName>Community_Name__c</fullName>
    <description>Name of your community for Survey</description>
    <label>Community Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>