force-app/main/default/objects/Survey_Setting__c/fields/Max_Question_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Question_Amount__c</fullName>
    <description>Max amount of questions available for creating in survey construcor.</description>
    <label>Max Question Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>