force-app/main/default/objects/Survey_Setting__c/fields/Max_Trigger_Rule_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Trigger_Rule_Amount__c</fullName>
    <description>Max amount of trigger rules available for creation and visible on Setup Trigger Rules Screen.</description>
    <label>Max Trigger Rule Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>