force-app/main/default/objects/Survey_Setting__c/fields/Min_Question_Amount__c.field-meta.xml
<CustomField>
    <fullName>Min_Question_Amount__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Min amount of questions available for creating in survey constructor.</description>
    <label>Min Question Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>