force-app/main/default/objects/Survey_Setting__c/fields/Page_Question_Amount__c.field-meta.xml
<CustomField>
    <fullName>Page_Question_Amount__c</fullName>
    <description>Amount of questions displayed on Add Questions ForSurvey screen of survey constructor.</description>
    <label>Page Question Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>