force-app/main/default/objects/Survey_Setting__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>